--- a/index.html
+++ b/index.html
@@ -22,16 +22,13 @@ layout: default
   <p class="lead">Hi! :wave: I'm Bergrós.</p>
 
   <p>
-  :computer: Software Developer at Solid Clouds<br>
+  :computer: Software Developer at <a href="https://www.ccpgames.com/">CCP</a><br>
   :round_pushpin: Located in Reykjavik, Iceland<br>
+  :rocket: I play and make video games<br>
+  :art: I like to <a href="{{ site.baseurl }}/art">paint</a>
   </p>
 
-  In my current position at Solid Clouds I work closely with artists and designers to create the UI for <a href="https://starborne.com/">Starborne</a> using Unity/C#.
-  <br><br>
-  This page is a blog for my projects and thoughts on tech I'm trying out.<br>
-  Feel free to check it out to see what I've been up to.
-
-  <p><br>
+  <p>
   :memo: I'd love to hear from you! bergros.gigja@gmail.com
   </p>
 </div>
